added and integrated sqlalchemy database for client and image data mngmt
